objects/RemoveEmptyRBBatchConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Days_From_Today__c</fullName>
        <inlineHelpText>If &quot;Use Date Limit&quot; is UNCHECKED Recurring Businesses with Created Date equal or greater than Today minus value of THIS field will be selected for deletion.</inlineHelpText>
        <label>Days From Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>If &quot;Use Date Limit&quot; checkbox is checked, Recurring Business with Created Date equal or lower than value of THIS field will be selected for deletion.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>If &quot;Use Date Limit&quot; checkbox is checked, Recurring Business with Created Date equal or greater than value of THIS field will be selected for deletion.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Use_Date_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Date Limit</label>
        <type>Checkbox</type>
    </fields>
    <label>Remove Empty RB Batch Configuration</label>
</CustomObject>